--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "sh script.sh",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
